methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:40: error: '<-' expected but ')' found.
  for(i<1 to 3) {
              ^MethodsPicture:43: error: illegal start of simple expression
} 
^